# diff_opt_tracking

./: CMakeLists.txt  README.md  package.xml
config/: random_world.rviz
launch/: bebop_spawner.launch  random_world.launch
nn_weights/: model.pth
scripts/mpc/: mpc_module.py  planner.py
scripts/mpc/nn_model/inferencing/: inference_qp.py
scripts/mpc/nn_model/models/: qp_model.py
scripts/utils/: line_of_sight_visualizer.py
urdf/: target.urdf
worlds/: random.world
